...
    var body: some View {
        GlassList {
            NavigationLink("Units", value: FlowRouter.Route.units)
            NavigationLink("Categories", value: FlowRouter.Route.categories)
            NavigationLink("Items", value: FlowRouter.Route.items)
            NavigationLink("Recipies", value: FlowRouter.Route.recipies)
            NavigationLink("Meals", value: FlowRouter.Route.meals)
        }
        .navigationTitle("Data")
    }
}

#Preview {
    DataFlowView().modelContainer(Models.testing.modelContainer)
}
...
